# scaffold

./: .cz.toml  .editorconfig  .gitignore  .pre-commit-config.yaml  .rumdl.toml  CHANGELOG.md  README.md  REUSE.toml  REVIEW.md  _typos.toml  copier.yml  pyproject.toml  release-please-config.json
.config/: lychee.toml  typos.toml
.github/: renovate.json5
.github/workflows/: ci.yml  label-hygiene.yml  link-check.yml  main.yml  pr.yml  release-please.yml
docs/: baseline.html  design.html  index.html  modules.html  questions.html  usage.html
scripts/: bootstrap-github.sh  refresh-binary-checksums.sh
template/: .cz.toml.jinja  .pre-commit-config.yaml.jinja  CHANGELOG.md.jinja  CONTRIBUTING.md.jinja  README.md.jinja  REUSE.toml.jinja  SECURITY.md.jinja  licenserc.toml.jinja  release-please-config.json.jinja  {% if has_python %}pyproject.toml{% endif %}.jinja  {% if include_docker %}Dockerfile{% endif %}.jinja  {% if not markdown_has_frontmatter %}markdown-header.toml{% endif %}.jinja
template/.config/: licenserc.toml.jinja  lychee.toml.jinja  release-please-config.json.jinja  rumdl.toml.jinja  typos.toml.jinja
template/.github/: CODEOWNERS.jinja  PULL_REQUEST_TEMPLATE.md.jinja  renovate.json
template/.github/ISSUE_TEMPLATE/: bug_report.yml.jinja  config.yml.jinja  feature_request.yml.jinja
template/.github/workflows/: ci.yml.jinja  label-hygiene.yml.jinja  link-check.yml.jinja  main.yml.jinja
template/scripts/: refresh-binary-checksums.sh.jinja
template/{% if include_devcontainer %}.devcontainer{% endif %}/: devcontainer.json.jinja
template/{% if include_sql %}sql{% endif %}/: .sqlfluff.jinja  README.md.jinja  example.sql.jinja
tests/: conftest.py  render-matrix.sh  test_generated_project_state.py  test_syncd_files.py  test_synced_files.py
tests/answers/: baseline-frontmatter.yml  baseline-only.yml  docker-shell.yml  full-modules.yml  sql.yml
